--- a/backend/src/templates/register.html
+++ b/backend/src/templates/register.html
@@ -3,6 +3,9 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
+  {% if error %}
+    <p class=error><strong>Error:</strong> {{ error }}
+  {% endif %}
   <form action="" method="post">
     <label for="email">Enter email: </label>
     <input type="text" name="email" type="email">
