--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -6,6 +6,14 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
+    <nav class="navbar">
+        <ul>
+            <li><a href="{{ url_for('index') }}">Landing</a></li>
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        </ul>
+    </nav>
     <div class="content">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
