--- a/backend/src/templates/base.html
+++ b/backend/src/templates/base.html
@@ -12,6 +12,7 @@
             <li><a href="{{ url_for('login') }}">Login</a></li>
             <li><a href="{{ url_for('register') }}">Register</a></li>
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            <li><a href="{{ url_for('profile') }}">Profile</a></li>
         </ul>
     </nav>
     <div class="content">
