--- a/website/src/templates/error.html
+++ b/website/src/templates/error.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %} Page not Found {% endblock %}
+{% block title %} Unauthorized {% endblock %}
 
 {% block content %}
-    <h1>Page Not Found</h1>
-    <p>You are not allowed to access this page.</p>
+    <h1 class="title">Page Not Found</h1>
+    <p class="subtitle">You are not allowed to access this page.</p>
 {% endblock %}
