--- a/website/src/templates/index.html
+++ b/website/src/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>{% block title %} Index {% endblock %}</h1>
-    <h2>Hello, world!</h2>
-    <h2>Welcome to WaCo.</h2>
+    <h1 class="title">{% block title %} Index {% endblock %}</h1>
+    <h2 class="subtitle">Hello, world!</h2>
+    <span>Welcome to WaCo.</span>
 {% endblock %}
