--- a/website/src/templates/login.html
+++ b/website/src/templates/login.html
@@ -3,14 +3,19 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    {% if error %}
-        <p class=error><strong>Error:</strong> {{ error }}
-    {% endif %}
 <form action="" method="post">
-    <label for="email">Enter email: </label>
-    <input type="text" name="email" type="email">
-    <label for="password">Enter password: </label>
-    <input type="text" name="password" type="password">
-    <button type="submit">Submit</button>
+    <div class="field">
+        <label class="label" for="email">Email</label>
+        <div class="control">
+            <input class="input" name="email" type="email" placeholder="Enter email...">
+        </div>
+    </div>
+    <div class="field">
+        <label class="label" for="password">Password</label>
+        <div class="control">
+            <input class="input" name="password" type="text" placeholder="Enter password...">
+        </div>
+    </div>
+    <button class="button is-primary" type="submit">Submit</button>
 </form>
 {% endblock %}
