Added bokeh for displaying soil moisture graphs with dummy data

--- a/website/src/templates/profile.html
+++ b/website/src/templates/profile.html
@@ -117,6 +117,14 @@
             </form>
         </div>
     </section>
+    <section class="section">
+        <div class="container">
+            <h3 class="subtitle"><strong>View Soil Moisture Levels</strong></h3>
+            <form action="/graph" method="get" target="_blank" >
+                <button class="button is-success" type="submit">Show </button>
+            </form>
+        </div>
+    </section>
 </body>
 
 </html>
