Update threshold manually, and notifications for under threshold

--- a/website/src/templates/base.html
+++ b/website/src/templates/base.html
@@ -27,7 +27,7 @@
         {% if messages %}
         <section class="section">
         {% for message in messages %}
-        <div class="notification is-danger">
+        <div class="notification is-primary">
             {{ message }}
         </div>
         {% endfor %}
