Coordinated color theme for buttons

--- a/website/src/templates/profile.html
+++ b/website/src/templates/profile.html
@@ -95,7 +95,7 @@
                                 {% endif %}
                             </td>
                             <td>
-                                <button class="button is-success" type="submit" form="threshold_{{device.id}}">Update Threshold</button>
+                                <button class="button is-primary" type="submit" form="threshold_{{device.id}}">Update Threshold</button>
                             </td>
                         </tr>
                         {% endfor %}
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="button is-success" type="submit">Submit</button>
+                <button class="button is-primary" type="submit">Submit</button>
             </form>
         </div>
     </section>
@@ -169,7 +169,7 @@
                     <label class="label">End Date</label>
                     <input type="datetime-local" name="end" min="2024-01-01T00:01" max="2024-12-31T23:59">
                 </div>
-                <button class="button is-success" type="submit">Show</button>
+                <button class="button is-primary" type="submit">Show</button>
             </form>
         </div>
     </section>
