--- a/website/src/templates/register.html
+++ b/website/src/templates/register.html
@@ -16,6 +16,6 @@
         <input class="input" name="password" type="text" placeholder="Enter password...">
       </div>
     </div>
-    <button class="button is-success" type="submit">Submit</button>
+    <button class="button is-primary" type="submit">Submit</button>
   </form>    
 {% endblock %}
