Added client-side Javascript to delete alerts

--- a/website/src/templates/profile.html
+++ b/website/src/templates/profile.html
@@ -25,10 +25,11 @@
     </nav>
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-            <section class="section">
+            <section class="section" id="alert_center">
             {% for message in messages %}
-                <div class="notification is-primary">
+                <div id="notif{{loop.index}}"class="notification is-primary">
                     {{ message }}
+                    <button class="delete" onClick="deleteNotification({{loop.index}})"></button>
                 </div>
             {% endfor %}
             </section>
@@ -173,6 +174,17 @@
             </form>
         </div>
     </section>
+
+    <!-- Client-side Javascript to delete notifications -->
+    <script>
+        function deleteNotification(id) {
+            document.getElementById(`notif${id}`).remove();
+
+            if (document.querySelectorAll('.notification').length == 0) {
+                document.getElementById('alert_center').style.display = 'none';
+            }
+        }
+    </script>
 </body>
 
 </html>
