--- a/website/src/templates/login.html
+++ b/website/src/templates/login.html
@@ -13,7 +13,7 @@
     <div class="field">
         <label class="label" for="password">Password</label>
         <div class="control">
-            <input class="input" name="password" type="text" placeholder="Enter password...">
+            <input class="input" name="password" type="password" placeholder="Enter password...">
         </div>
     </div>
     <button class="button is-primary" type="submit">Submit</button>
